Renamed package to `@garraflavatra/yeslint`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yeslint",
+  "name": "@garraflavatra/yeslint",
   "version": "1.0.0",
   "description": "Sensible configuration for your ESLint installation",
   "main": "index.js",
